cicd-demo-tools/ingress/awx-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: awx-tower-ingress
  namespace: awx
  annotations:
    nginx.org/redirect-to-https: "true"
    # nginx.org/keepalive: "180"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
      - "awx-tower.demo.solace.dev"
#    secretName: ingress-tls-secret
  rules:
  - host: "awx-tower.demo.solace.dev"
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: awx-tower-service
            port:
              number: 80
